WIP finished different types of SBMLImporter, current swapping implementations.